    more accurate.  This also fixes a bug reported by Adam Warner
    related to the ~@F format directive.
  * fixed bug: SET-SYNTAX-FROM-CHAR correctly shallow-copies a
    dispatch table if the from-char is a dispatch macro character.
  * fixed bug: COUNT and EQUAL on bit vectors with lengths divisible
    by the wordsize no longer ignore the last word.  (reported by Lutz
    Euler)
  * optimization: sequence traversal functions use their freedom to
    coerce function designators to functions.
  * optimization: code with many calls to CLOS methods specialized on
    CLOS classes has had redundant type checks removed.
  * fixed some bugs related to Unicode integration:
    ** portions of multibyte characters at the end of buffers for
       character-based file input are correctly transferred to the
       start of the buffer at the next read.
    ** COMPILE-FILE now respects any EXTERNAL-FORMAT argument given,
       passing it through to OPEN.
    ** LOAD on source files likewise passes any EXTERNAL-FORMAT
       argument given to internal calls to OPEN.
    ** the built-in comment readers (introduced by character sequences
       ";" and "#|") are more forgiving to encoding errors; they will
       STYLE-WARN and then attempt to resync the stream at a character
       boundary.  (thanks to Teemu Kalvas)
  * fixed some bugs in the x86-64 port:
    ** Negative short int return values from c-calls are sign-extended
       correctly.
    ** The stack is aligned to 16-bytes for c-calls, as required by
       the ABI. (thanks to Cheuksan Wang)
    ** The disassembler understands more x86-64. (thanks to Cheuksan Wang)
    ** The regression tests use SB-ALIEN:INT instead of SB-ALIEN:INTEGER
       for enums. (thanks to Vincent Arkesteijn)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** Space, Tab, Linefeed, Return and Page have the invalid
       secondary constituent character trait.